--- a/BibliotecaGit/BibliotecaGit.csproj
+++ b/BibliotecaGit/BibliotecaGit.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Colegio.cs" />
     <Compile Include="Profesion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Usuario.cs" />
